# experiment

./: .gitignore  README.md
c++/astconsumer/: CMakeLists.txt
c++/concurrency/: number.cpp
c++/const_default_parameter/: const_default_parameter.cpp
c++/coroutine/: coroutine  coroutine.cpp
c++/format/: format.cpp
c++/lambda/: disassembler.txt  lambda  lambda.cpp
c++/lrvalue/: lrvalue.cpp
c++/move/: move  move.cpp
c++/perfect_string/: perfect_string  perfect_string.cpp
c++/thread/: thread  thread.cpp  wait_for_test  wait_for_test.cpp
c++/value_categories/: value_categories  value_categories.cpp
c++/value_category/: detector  detector.cpp
c/domain_socket/: domain_socket.c
c/offset/: offset  offset.c
clang/ast_parser/: CMakeLists.txt  ast_parser.cpp  test.cpp
clang/tokenizer/: command.txt  token_dump.cpp
javascript/arrow/: test_const.js
javascript/async/: test_async.js
javascript/promise/: promise_timing.js
linux/cmd/: getopt  getopt.c
linux/hardware/: get_system_info.c  timer.c
linux/openssl/: build.guide  get_num_locks.c
linux/os/: user_info  user_info.c
linux/pagesize/: getpagesize.c
linux/thundering_herd/: thundering_herd  thundering_herd.c
linux/time/: gettimeofday.c
llvm/kaleidoscope/: .cquery  CMakeLists.txt
nodejs/: package.json  tsconfig.json
nodejs/stream/: read_stream.js  read_stream.ts
ruby/return/: return.rb
ruby/xcodeproj/: access_link_binary_with_libraries_phase.rb
rust/grep/: Cargo.toml
rust/hello/: Cargo.toml
rust/server/: Cargo.toml
rust/threads/: Cargo.toml
rust/variable/: Cargo.toml
swift/swift.playground/: Contents.swift
(+22 files in other folders)
